# bd1-timekeeper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EURECIA_TIMESHEET_API.md  NOTICE  README.md  RELEASE.md  SECURITY.md  THIRD_PARTY_LICENSES.md  bd1-prd.md  pyproject.toml
.github/workflows/: build.yml
icons/macos/: BD-1.icns
scripts/: bd1_entry.py  bd1_macos.spec  windows-installer.iss
src/bd1/: __init__.py  __main__.py  activity.py  analyzer.py  app.py  audio_activity.py  autostart.py  calendar.py  eurecia.py  formatting.py  idle.py  macos_dock.py  mattermost.py  mattermost_window.py  models.py  network.py  observer.py  paths.py  processes.py  report_window.py  reports.py  settings.py  single_instance.py  state.py  storage.py  system.py  tray.py  window_icon.py  windows_session.py
src/bd1/assets/: __init__.py
src/bd1/assets/icons/: __init__.py
src/bd1/assets/icons/hd/: __init__.py
src/bd1/assets/icons/head/: __init__.py
src/bd1/assets/icons/head-small/: __init__.py
src/bd1/assets/icons/head_16/: __init__.py
tests/: test_activity.py  test_analyzer.py  test_app.py  test_audio_activity.py  test_autostart.py  test_eurecia.py  test_formatting.py  test_idle.py  test_macos_dock.py  test_main.py  test_mattermost.py  test_mattermost_cli.py  test_mattermost_window.py  test_network.py  test_observer.py  test_processes.py  test_report_window.py  test_reports.py  test_settings.py  test_single_instance.py  test_storage.py  test_tray.py  test_weekly_declaration.py  test_window_icon.py
