# Copyright (c) 2026 Obeo
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# https://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "bd1"
version = "0.1.0"
description = "Local desktop companion that suggests worked time from activity observations."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Obeo" }]
maintainers = [{ name = "Obeo" }]
license = "EPL-2.0"
license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_LICENSES.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "keyring>=25.7",
    "platformdirs>=4.3",
    "psutil>=6.1",
    "holidays>=0.38",
    "tzdata>=2025.2",
]

[project.optional-dependencies]
desktop = [
    "pillow>=10.4",
    "pynput>=1.7",
    "pystray>=0.19",
    "six>=1.17",
]
dev = [
    "ruff>=0.15.0",
]
build = [
    "build>=1.2",
    "pyinstaller>=6.11",
]

[project.scripts]
bd1 = "bd1.__main__:main"

[project.urls]
Homepage = "https://github.com/Obeo/bd1-timekeeper"
Repository = "https://github.com/Obeo/bd1-timekeeper.git"
Issues = "https://github.com/Obeo/bd1-timekeeper/issues"
License = "https://www.eclipse.org/legal/epl-2.0/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bd1.assets.icons.hd" = ["*.png"]
"bd1.assets.icons.head" = ["*.png"]
"bd1.assets.icons.head_16" = ["*.png"]
"bd1.assets.icons.head-small" = ["*.png"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
